# pico-enclosure-system

./: CMakeLists.txt  picocom-retry.sh
kicad/enclosure_sys/: #auto_saved_files#  enclosure_sys.kicad_prl  enclosure_sys.kicad_pro  enclosure_sys.kicad_sch  ~enclosure_sys.kicad_sch.lck
src/: adc_lib.c  adc_lib.h  ds18b20.c  ds18b20.h  fan.c  fan.h  font5x7.c  font5x7.h  main.c  oled_lib.c  oled_lib.h  options.h  rotary_encoder_module.c  rotary_encoder_module.h  spi_lib.c  spi_lib.h
